@@ -1,10 +1,9 @@
 plugins {
-    id 'org.owasp.dependencycheck' version '5.1.0'
+    id "org.owasp.dependencycheck" version "5.3.0"
     id 'scala'
     id 'com.github.lkishalmi.gatling' version '3.0.2'
-    id 'java-gradle-plugin'
     id 'groovy'
-    id 'com.gradle.plugin-publish' version '0.9.8'
+    id 'com.gradle.plugin-publish' version '0.12.0'
     id 'maven-publish'
 }
 
@@ -16,32 +15,21 @@ version = '1.0'
 sourceCompatibility = "11"
 targetCompatibility = "11"
 
-tasks.withType(JavaExec) {
-    jvmArgs = ['-Xms1024m', '-Xmx2048m', '-XX:+UseConcMarkSweepGC']
-}
-
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'Probate Performance Tests',
-                'Implementation-Version': version
-    }
-}
-
-/*dependencyCheck {
-    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-    // range of 0-10 fails the build, anything greater and it doesn't fail the build
-    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
-    suppressionFile = 'dependency-check-suppressions.xml'
-}*/
-
 repositories {
     jcenter()
 }
 
-ScalaCompileOptions.metaClass.daemonServer = true
-ScalaCompileOptions.metaClass.fork = true
-ScalaCompileOptions.metaClass.useAnt = false
-ScalaCompileOptions.metaClass.useCompileDaemon = false
+jar {
+    manifest {
+        attributes 'Main-Class': 'io.gatling.app.Gatling'
+    }
+    from {
+        configurations.testCompile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    from sourceSets.test.output
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
+}
+
 
 ext {
     gatlingVersion = '3.3.1'
@@ -58,28 +46,9 @@ dependencies {
 }
 
 gatling {
-    toolVersion '3.3.1'
-    scalaVersion '2.12.8'
+    toolVersion = '3.3.1'
+    scalaVersion = '2.12.8'
     simulations = [
-        'uk.gov.hmcts.reform.probate.performance.simulations.Probate_Jenkins'
-        ]
+            'uk.gov.hmcts.reform.probate.performance.simulations.Probate_Jenkins'
+    ]
 }
-
-test {
-    testLogging {
-        showStandardStreams = true
-    }
-    dependsOn("publishToMavenLocal")
-    systemProperty "com.github.lkishalmi.gatling.version", project.version
-}
-
-pluginBundle {
-    website = 'https://github.com/lkishalmi/gradle-gatling-plugin'
-    vcsUrl = 'https://github.com/lkishalmi/gradle-gatling-plugin'
-    description = 'Gatling Simulation Execution'
-    tags = ['gatling', 'load test', 'stress test', 'performance test', 'scala']
-
-
-}
-
-ext ['netty.version'] = '4.0.51.Final'
